paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_001/target.compile.log
warning: unnecessary parentheses around `if` condition
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_001/target.rs:27:8
   |
27 |     if (sum == 3.0) { 0 } else { 1 }
   |        ^          ^
   |
   = note: `#[warn(unused_parens)]` (part of `#[warn(unused)]`) on by default
help: remove these parentheses
   |
27 -     if (sum == 3.0) { 0 } else { 1 }
27 +     if sum == 3.0 { 0 } else { 1 }
   |

error[E0277]: `main` has invalid return type `i32`
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_001/target.rs:14:14
   |
14 | fn main() -> i32 {
   |              ^^^ `main` can only return types that implement `Termination`
   |
   = help: consider using `()`, or a `Result`

warning: value assigned to `shared_i` is never read
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_001/target.rs:15:13
   |
15 |     let mut shared_i: f64 = 0.0;
   |             ^^^^^^^^
   |
   = help: maybe it is overwritten before being read?
   = note: `#[warn(unused_assignments)]` (part of `#[warn(unused)]`) on by default

warning: value assigned to `shared_i` is never read
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_001/target.rs:17:5
   |
17 |     shared_i = 1.0;
   |     ^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

warning: value assigned to `shared_i` is never read
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/statements/return_1/sample_001/target.rs:22:5
   |
22 |     shared_i = s.i;
   |     ^^^^^^^^
   |
   = help: maybe it is overwritten before being read?

error: aborting due to 1 previous error; 4 warnings emitted

For more information about this error, try `rustc --explain E0277`.